--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -53,34 +53,42 @@
             <ul id="tabs" class="tabs">
                 <li class="tab active"><a href="#exercise">Ülesanne</a></li>
                 <li id="tab-submit" class="tab" style="display: none;"><a href="#submit">Esitamine</a></li>
-                <li id="tab-my-submissions" class="tab" style="display: none;"><a href="#my-submissions">Minu esitused</a></li>
-                <li id="tab-student-submissions" class="tab" style="display: none;"><a href="#student-submissions">Esitused</a></li>
-                <li id="tab-student-submission" class="tab" style="display: none;"><a href="#student-submission"></a></li>
+                <li id="tab-my-submissions" class="tab" style="display: none;">
+                    <a href="#my-submissions">Minu esitused</a></li>
+                <li id="tab-student-submissions" class="tab" style="display: none;"><a href="#student-submissions">Esitused</a>
+                </li>
+                <li id="tab-student-submission" class="tab" style="display: none;"><a href="#student-submission"></a>
+                </li>
             </ul>
         </div>
         <div class="card-content bt">
             <div id="exercise">
                 <div class="exercise-info">
-                    <p><span class="subheading">Tähtaeg: </span> 18. detsember, 21:07</p>
-                    <p><span class="subheading">Hindamine: </span> automaatne</p>
-                    <p><span class="subheading">Lävend:</span> 50%</p>
+                    <p id="exercise-soft-deadline" style="display: none">
+                        <span class="subheading">Tähtaeg: </span>
+                        <span id="exercise-soft-deadline-value"></span></p>
+                    <p id="exercise-hard-deadline" style="display: none">
+                        <span class="subheading">Sulgemise aeg: </span>
+                        <span id="exercise-hard-deadline-value"></span></p>
+                    <p id="exercise-grader" style="display: none">
+                        <span class="subheading">Hindamine: </span>
+                        <span id="exercise-grader-value"></span></p>
+                    <p id="exercise-threshold" style="display: none">
+                        <span class="subheading">Lävend: </span>
+                        <span id="exercise-threshold-value"></span>%</p>
+                    <p id="exercise-last-modified" style="display: none">
+                        <span class="subheading">Viimati muudetud: </span>
+                        <span id="exercise-last-modified-value"></span></p>
+                    <p id="exercise-student-visible" style="display: none">
+                        <span class="subheading">Õpilastele nähtav: </span>
+                        <span id="exercise-student-visible-value"></span></p>
+                    <p id="exercise-assessments-student-visible" style="display: none">
+                        <span class="subheading">Hinnangud õpilastele nähtavad: </span>
+                        <span id="exercise-assessments-student-visible-value"></span></p>
                 </div>
                 <div class="exercise">
-                    <h2>Ülesanne 1. Lorem ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis consectetur diam. Mauris semper
-                        placerat metus maximus faucibus. Cras ut ante in sapien pulvinar aliquam. Maecenas elementum
-                        tortor id nulla imperdiet auctor. Nullam facilisis a nisl sit amet consequat. Nunc sodales,
-                        lorem sollicitudin efficitur dapibus, magna lorem tincidunt sem, non lacinia est diam eu sapien.
-                        Vivamus quis porttitor odio, nec gravida ipsum. Sed purus nulla, elementum in mauris ut,
-                        molestie dictum enim.</p>
-                    <p>Morbi et leo eu eros lobortis vulputate et at neque. Aenean rutrum vulputate scelerisque.
-                        Vestibulum interdum ipsum vel diam pharetra tristique. Vivamus tempor laoreet pellentesque. Cras
-                        dapibus libero tortor, sit amet luctus elit tempus nec. Fusce et elit volutpat eros bibendum
-                        feugiat. In vitae congue elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-                        posuere cubilia Curae; Praesent vestibulum leo nec ligula venenatis laoreet. Aenean ut risus nec
-                        est pellentesque aliquam. Pellentesque pharetra pretium est, quis maximus odio varius ut. In hac
-                        habitasse platea dictumst. Sed dictum dignissim lacinia. Duis in pulvinar risus, id sollicitudin
-                        quam. Cras in eros nulla.</p>
+                    <h2 id="exercise-title"></h2>
+                    <div id="exercise-text"></div>
                 </div>
             </div>
             <div id="submit">
